# fast_git

./: .gitignore
AES_Encryption/: encode.ts  encryption.ts  package.json  run.ts
CLI/cli_tool/: command.json  package.json  run.js  run_deno.js
CLI/coin/: package.json
CLI/py_env/: hello.py  index.js  package.json  push.js  python.py  start.js
Web_ML/: index.html  main.js  style.css
angular/blogangular/: .gitignore  README.md  add_post.sh  angular.json  deploy.sh  git_push.sh  karma.conf.js  package.json  publish.sh
angular/learn/: README.md  angular.json  package.json
blog/: package.json
chrome_tools/react/: react.crx
chrome_tools/vue/: vue.crx
fastify/: items.js  package.json  server.js  test.http
gatsby/blog/: package.json
gatsby/gatsby_blog/: gatsby-config.js  package.json
gatsby/learn/: gatsby-config.js  package.json
google_Closure_Library/: hello.js  package.json
indoor3D-master/: index.html
learn/js_code/: proxy.js
learn/my-blog/: gatsby-config.js
learn/node.js/: axios.js  base64.js  curl.js  got.js  http.js  kiwi_homepage.json  kiwi_homepage_2021-8-23.json  package.json  shiming.json  split_url.js  test.html  url_data.txt
learn/over-javascript/: .prettierrc
learn/react-app/: gatsby-config.js  package.json
learn/socket.io/: index.html  index.js  package.json
learn/tf_js/: index.html
my_blog/: next.config.js  package.json
my_blog/components/: Footer.js
my_blog/data/: projectsData.js  siteMetadata.js
my_blog/pages/: _app.js  (+1 more)
rust_fontend/sycamore_app/: Cargo.toml  index.html
rust_fontend/sycamore_app/src/: main.rs
(+918 files in other folders)
