[package]
name = "sycamore_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.8.0-beta.3", features = [
    "serde",
    "futures",
    "builder",
] }
sycamore-router = "0.8.0-beta.3"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1.32"
tracing-wasm = "0.2"
js-sys = "0.3"


[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "console",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'Node',
    'VideoTrack',
    "Navigator",
]


[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
